fatty_acids_report.txt
file:///C:/Users/yourc/yourcoach_new/analyze_fatty_acids.mjs:1
import foodDatabase from './src/foodDatabase.js';
       ^^^^^^^^^^^^
SyntaxError: The requested module './src/foodDatabase.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.20.0
